clusters/crc-ambient/overlays/options/gateway-egress-waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: egress-waypoint
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              istio.io/rev: default
      name: mesh
      port: 15008
      protocol: HBONE
